k8s-rpi-apps-ingresses/vpnswitcher-ingress/vpnswitcher-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vpnswitcher
  namespace: vpnswitcher
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/ingresses"    
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`<vpnswitcherhostname>.<domainname>`)
    kind: Rule
    services:
    - name: vpnswitcher
      port: 80
